Fixin' LeaveEmailBeforePayingPopup.js style problem on Safari

--- a/book-store-frontend/src/components/leave-email-before-paying-popup/LeaveEmailBeforePayingPopup.css
+++ b/book-store-frontend/src/components/leave-email-before-paying-popup/LeaveEmailBeforePayingPopup.css
@@ -12,11 +12,9 @@
     bottom: 40%;
     left: 0;
     right: 0;
-}
-
-.leave-email-before-paying-popup-subsubcontainer {
     border-radius: 20px;
 }
+
 
 .leave-email-before-paying-popup-last-moment-header {
     opacity: 0.8;
